--- a/Application/credentials/.env
+++ b/Application/credentials/.env
@@ -1,4 +1,4 @@
-MONGO_DB_USERNAME = "dkarimi"
-MONGO_DB_PASSWORD = "dkarimi"
+MONGO_DB_USERNAME = ""
+MONGO_DB_PASSWORD = ""
 MONGO_DB_NAME = "WorkoutGenerator"
 MONGO_COLLECTION = "Workout"
